--- a/first.html
+++ b/first.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Hello,world</h1>
-    <h1>Hello,world</h1>
-    <h1>Hello,world</h1>
-    <h1>Hello,world</h1>
+    <h2>Hello,world</h2>
+    <h3>Hello,world</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aperiam ut voluptate dolores quos odit itaque eos perspiciatis est, facere consequuntur quae quas saepe maiores numquam rem, quia laboriosam tempora.</p>
+    
 </body>
 </html>
