--- a/table.html
+++ b/table.html
@@ -39,7 +39,34 @@
             <td></td>
             <td colspan="3">Client Meeting</td>
             <td colspan="3">Commute</td>
-            <td colspan="2">Free</td>
+            <td colspan="4">Free</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td>in office</td>
+            <td></td>
+            <td colspan="10">in office</td>
+        </tr>
+        <tr>
+            <td rowspan="2">lecture</td>
+            <td>wednesday</td>
+            <td>CSC205</td>
+            <td></td>
+            <td colspan="10">prepration</td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td>MAM200</td>
+            <td></td>
+            <td colspan="4">Tutorial for MAM200</td>
+            <td colspan="6">Free</td>
+        </tr>
+        <tr>
+            <td>Research</td>
+            <td>Friday</td>
+            <td>Research</td>
+            <td></td>
+            <td colspan="10">Research</td>
         </tr>
     
 
